# engine-poc

./: .gitignore  README.md  asan_supp.txt  bench.md  meson.build
app/: components_demo.cc  main.cc  meson.build
app/game/: army.cc  army.hh  game_state.cc  game_state.hh  soldiers_container.cc  soldiers_container.cpp  soldiers_container.hh
app/game/components/: army_controller.cc  army_controller.hh  clock_component.cc  clock_component.hh  debug_components.hh  fps_displayer.cc  fps_displayer.hh  key_camera_controller.cc  key_camera_controller.hh  key_controller.cc  key_controller.hh  paintable_region.cc  paintable_region.hh
app/game/components/soldiers/: soldier.cc  soldier.hh  soldier_cac.cc  soldier_cac.hh
app/game/configuration/: args_reader.cc  args_reader.hh
app/game/gameplay/: command.cc  command.hh
app/game/interfaces/: livable.hh
assets/: _assets.json  tilemap.json  tilemap_basic.json  tileset.json  tileset_basic.json
include/: meson.build
include/engine/: component.hh  engine.hh  entity.hh  fwd.hh  game_camera.hh  guaranteed_ptr.hh  math.hh  math_utils.hh  registry.hh  world.hh
include/engine/components/: image_renderer.hh  text_renderer.hh  tilemap_renderer.hh  transform.hh
include/engine/components/ui/: ui_button.hh  ui_component.hh  ui_text.hh
include/engine/resources/: image.hh  resources_manager.hh  tile_map.hh  tile_set.hh
include/engine/sdl/: colors.hh  configuration.hh  drawer.hh  game_window.hh  inputs.hh
include/engine/utils/: dynamic_spatial_grid.hh  fmt_utils.hh  fs_utils.hh  memory.hh  quadtree.hh  spatial_grid.hh  stopwatch.hh  time_barrier.hh  timer.hh
include/quadtree/: Box.h  QuadTree.h
src/: meson.build
src/engine/: engine.cc  engine_loop.cc  engine_loop_event.cc  entity.cc  game_camera.cc  math.cc  registry.cc  world.cc
src/engine/components/: image_renderer.cc  text_renderer.cc  tilemap_renderer.cc  transform.cc
src/engine/components/ui/: ui_button.cc  ui_text.cc
src/engine/resources/: image.cc  resources_manager.cc  tile_map.cc  tile_set.cc
src/engine/sdl/: colors.cc  configuration.cc  drawer.cc  game_window.cc  inputs.cc
src/engine/utils/: fs_utils.cc
